<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">校印通</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="note">留言：</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">输入账号</string>
    <string name="login_label_password">密码</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_register_link">没有账号？</string>
    <string name="hint_register">注册</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="remember_psw">记住密码</string>
    <string name="back">返回</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="add_task">添加任务</string>
    <string name="general_agent">总代理</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_edit_task">EditTask</string>
    <string name="empty_message">No items yet</string>
    <string name="loading_message">Please wait</string>
    <string name="error_message">Oops! Something wrong happened</string>
    <string name="empty_button">Try again</string>
    <string name="loading_button">Cancel</string>
    <string name="error_button">Try again</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="server_error">服务器响应异常，请稍后再试</string>
    <string name="title_activity_reset">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="old_pw_hint">请输入旧密码</string>
    <string name="new_pw_hint">请输入新密码</string>
    <string name="verify_new_pw">确认新密码</string>
    <string name="verify_new_pw_hint">请再次输入新密码</string>
    <string name="title_activity_register">注册</string>
    <string name="hint_email">123345@qq.com</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_phone">输入电话号码</string>
    <string name="hint_username">请输入你的真实姓名</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="phone_error">请输入正确的电话号码</string>
    <string name="empty_error">此项不能为空</string>
    <string name="hint_pw_again">再次输入密码</string>
    <string name="title_activity_history">订单记录</string>
    <string name="joke">刷新成功</string>
    <string name="loading">正在加载更多</string>
    <string name="no_more">已加载全部</string>
    <string name="has_refreshed">刷新成功</string>
    <string name="order_delivered_confirm">确定此订单已派送?</string>
    <string name="agent_delivered">确定订单已送达？</string>
    <string name="setting">设置</string>
    <string name="setting_push_message">消息推送</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_feedback">用户反馈</string>
    <string name="setting_logout">退出登录</string>
    <string name="order_detail">订单详情</string>
    <string name="title_activity_setting">设置</string>
    <string name="wait_printed_num">待打印文件数:<xliff:g id="num">%s</xliff:g></string>
    <string name="order_receiverd_notify">订单已送达</string>
    

</resources>
