<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:App="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".RegisterActivity" xmlns:app="http://schemas.android.com/apk/res/com.xiaoyintong.app">

    <!-- <TextView 
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_register"
        android:background="@drawable/top_bg"
        android:textColor="@color/color_white"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        /> -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/register_bg"
            >
            <com.andreabaccega.widget.FormEditText
		           app:testType="personName"
		           app:testErrorString="@string/email_error"
		           app:emptyErrorString="@string/empty_error"
		           android:id="@+id/et_username"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_centerHorizontal="true"
		           android:hint="@string/hint_username"
		           android:inputType="textPersonName"
		           android:layout_marginLeft="10dp"
		           android:layout_marginRight="10dp"
		           android:padding="20dp"
		           android:background="@drawable/background_login_div_bg"
		           /> 
           
		    <com.andreabaccega.widget.FormEditText
		           app:testType="email"
		           app:testErrorString="@string/email_error"
		           app:emptyErrorString="@string/empty_error"
		           android:id="@+id/et_email"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_centerHorizontal="true"
		           android:layout_below="@id/et_username"
		           android:layout_marginTop="5dp"
		           android:layout_marginLeft="10dp"
		           android:layout_marginRight="10dp"
		           android:padding="20dp"
		           android:hint="@string/hint_email"
		           android:inputType="textEmailAddress"
		           android:background="@drawable/background_login_div_bg"
		           /> 
		           
		    <com.andreabaccega.widget.FormEditText
		           app:testType="regexp"
		           app:customRegexp="^((13[0-9])|(15[^4,\\D])|(18[0-9]))\\d{8}$"
		           app:testErrorString="@string/phone_error"
		           app:emptyErrorString="@string/empty_error"
		           android:id="@+id/et_phone"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_centerHorizontal="true"
		           android:layout_below="@id/et_email"
		           android:layout_marginTop = "5dp"
		           android:layout_marginLeft="10dp"
		           android:layout_marginRight="10dp"
		           android:padding="20dp"
		           android:hint="@string/hint_phone"
		           android:inputType="phone"
		           android:background="@drawable/background_login_div_bg"
		           /> 
		    
		    <com.andreabaccega.widget.FormEditText
		           app:emptyErrorString="@string/empty_error"
		           android:id="@+id/et_password"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_centerHorizontal="true"
		           android:layout_below="@id/et_phone"
		           android:layout_marginTop = "5dp"
		           android:layout_marginLeft="10dp"
		           android:layout_marginRight="10dp"
		           android:padding="20dp"
		           android:hint="@string/hint_password"
		           android:inputType="textPassword"
		           android:background="@drawable/background_login_div_bg"
		           /> 
		           
		    <com.andreabaccega.widget.FormEditText
		           app:emptyErrorString="@string/empty_error"
		           android:id="@+id/et_pw_again"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_centerHorizontal="true"
		           android:layout_below="@id/et_password"
		           android:layout_marginTop="5dp"
		           android:layout_marginLeft="10dp"
		           android:layout_marginRight="10dp"
		           android:padding="20dp"
		           android:hint="@string/hint_pw_again"
		           android:inputType="textPassword"
		           android:background="@drawable/background_login_div_bg"
		           /> 
        </RelativeLayout>
    
            
    <Button 
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/hint_register"
        android:textColor="@color/abs__background_holo_light"
        android:background="@drawable/login_btn_selector"
        android:layout_margin="10dp"/>

</RelativeLayout>
