<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  		
  	<RelativeLayout 
  	    android:id="@+id/login_div"
  	    android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:padding="15dip"        
	  	android:layout_margin="15dip" 
	  	android:layout_alignParentTop="true"
	  	android:background="@drawable/background_login_div_bg" >
  		<!-- 账号 -->
	  	<TextView 
	  		android:id="@+id/login_user_input"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_alignParentTop="true"
	  		android:layout_marginTop="5dp"
	  		android:text="@string/login_label_username"
	  		/>
	  	<AutoCompleteTextView
	  		android:id="@+id/username_edit"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:hint="@string/login_username_hint"
	  		android:layout_below="@id/login_user_input"
	  		android:singleLine="true"
	  		android:inputType="text"
	  		android:padding="7dp"
	  		android:background="@drawable/background_login_div"/>
	    <!-- 密码 text -->
	    <TextView 
	    	android:id="@+id/login_password_input"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/username_edit"
	    	android:layout_marginTop="3dp"
	    	android:text="@string/login_label_password"
	    	/>
	    <EditText 
	    	android:id="@+id/password_edit"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/login_password_input"
	    	android:hint="@string/login_password_hint"
	    	android:password="true"
	    	android:padding="7dp"
	    	android:singleLine="true"
	    	android:maxLength="14"
	    	android:inputType="textPassword" 
	    	android:background="@drawable/background_login_div"/>
	    
	    <CheckBox 
	        android:id="@+id/savePasswordCB"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:layout_below="@id/password_edit"
            android:layout_marginTop="5dp" 
            android:layout_marginLeft="20dp"  
            android:text="@string/remember_psw"
            android:textColor="@color/color_gray_light"/>
	    <!-- 登录button -->
	    <Button 
	    	android:id="@+id/signin_button"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="15dp"
	    	android:layout_below="@id/savePasswordCB"
	    	android:layout_alignRight="@id/password_edit"
	    	android:layout_alignLeft="@id/password_edit"
	    	android:maxHeight="50dp"
	    	android:textColor="@color/color_white"
	    	android:text="@string/login_label_signin"
	    	android:background="@drawable/login_btn_selector" />
  	</RelativeLayout>
  
  	<RelativeLayout 
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_alignParentBottom="true"
      	android:layout_centerHorizontal="true"
      	android:layout_marginBottom="20dp"
      	 >
		 <TextView  android:id="@+id/register_link"
		     android:text="@string/login_register_link"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="15dp"
		     android:textColor="#888"
		     android:textColorLink="#FF0066CC" 
		     android:layout_centerVertical="true"
		     android:autoLink="web"/>
		 <Button 
		     android:id="@+id/registerBtn"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:layout_toRightOf="@id/register_link"
		     android:layout_marginLeft="10dp"
		     android:textColor="@color/deep_green"
		     android:background="#00000000"
		     android:layout_centerVertical="true"
		     android:text="@string/hint_register"/>
		<!-- <ImageView 
		    android:id="@+id/miniTwitter_logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentBottom="true"
		    android:layout_marginRight="25dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginBottom="25dp" /> -->
	<!-- 	<ImageView 
		    android:src="@drawable/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/miniTwitter_logo"
			android:layout_alignBottom="@id/miniTwitter_logo"
			android:paddingBottom="8dp"/> -->
  	</RelativeLayout>
  
</RelativeLayout>
