<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/loading_bg" >
    
	    <TextView 
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/order_delivered_confirm"
	        android:textColor="@color/color_white"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="15dp"
	        android:textSize="22sp"/>
		<LinearLayout 
		    android:layout_marginTop="15dp"
		    android:layout_below="@id/title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:weightSum="2.0"
		    android:orientation="horizontal"
		    android:baselineAligned="false">
		    <RelativeLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.0"
		        android:padding="15dp"
		        >
		        <Button 
		            android:id="@+id/cancel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/no"
		            android:background="@drawable/cancle_btn_selector"
		            android:layout_centerInParent="true"
		            android:gravity="center"/>
		    </RelativeLayout>
		    
		    <RelativeLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.0"
		        android:padding="15dp"
		        >
		        <Button 
		            android:id="@+id/yes"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/yes"
		            android:background="@drawable/yes_btn_selector"
		            android:layout_centerInParent="true"
		            android:gravity="center"
		            android:textColor="@color/color_white"/>
		    </RelativeLayout>
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
